# keel

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  LICENSE-NOTE.md  README.md  ROADMAP.md  SECURITY.md  _config.yml  release-please-config.json
.agents/: README.md  settings.json
.agents/commands/: harness-audit.md  new-kdr.md  wiki-note.md
.claude/commands/: new-case.md  preflight.md
.github/ISSUE_TEMPLATE/: kdr-proposal.md
.github/workflows/: ci.yml  harness-audit.yml  pages.yml  release-please.yml  release.yml
_includes/: head-custom.html  head.html
assets/css/: style.scss
compiler/: AGENTS.md  ARCHITECTURE.md
compiler/conformance-runner/: Cargo.toml
compiler/conformance-runner/src/: json.rs  main.rs
compiler/keelc-ast/: Cargo.toml
compiler/keelc-ast/src/: lib.rs  pretty.rs
compiler/keelc-backend-go/: Cargo.toml
compiler/keelc-backend-go/src/: analysis.rs  json.rs  lib.rs  runtime.rs  types.rs
compiler/keelc-diag/: Cargo.toml
compiler/keelc-diag/src/: lib.rs  registry.rs
compiler/keelc-driver/: Cargo.toml
compiler/keelc-driver/src/: build_cache.rs  gen.rs  image.rs  lib.rs  link.rs  main.rs  manifest.rs  query.rs  sha256.rs  tar.rs
compiler/keelc-driver/tests/: build.rs  build_cache.rs
compiler/keelc-kir/: Cargo.toml
compiler/keelc-kir/src/: lib.rs  lower.rs
compiler/keelc-lex/: Cargo.toml
compiler/keelc-lex/src/: lib.rs
compiler/keelc-lsp/: Cargo.toml
compiler/keelc-lsp/src/: capabilities.rs  diagnostics.rs  documents.rs  frame.rs  lib.rs  symbols.rs
compiler/keelc-lsp/tests/: transcripts.rs
compiler/keelc-parse/: Cargo.toml
compiler/keelc-parse/src/: lib.rs
compiler/keelc-query/: Cargo.toml
compiler/keelc-query/src/: lib.rs
compiler/keelc-resolve/: Cargo.toml
compiler/keelc-resolve/src/: lib.rs
compiler/keelc-span/: Cargo.toml
compiler/keelc-span/src/: lib.rs
compiler/keelc-types/: Cargo.toml
compiler/keelc-types/src/: infer.rs  lib.rs
docs/: 0.1-release-readiness.md  M6-implementation-handoff.md  README.md  cli-reference.md  compatibility.md  conformance-gap-analysis.md  core-surface-operators-and-interpolation.md  cross-package-linking-notes.md  deployment.md  diagnostics.md  feature-status.md  generics-implementation.md  getting-started.md  idiomatic-keel.md  language-tour.md  m1-compiler-workspace.md  m2-semantic-analysis-status.md  m3-go-backend-status.md  m5-next-steps.md  m6-exit-plan.md  m6-json-implementation.md  m6-log-implementation.md  m6-simplification-audit.md  m6-status.md  m7-packages-capabilities.md  m7-status.md  m8-build-time-profile.md  m8-status.md  milestone-status.md  packages-and-capabilities.md  release-process.md  stdlib-reference.md  syntax-index.md  troubleshooting.md  vision.md  who-keel-is-not-for.md
docs/kdr/: 0000-template.md  0001-editions.md  0002-no-async-await.md  0003-no-inheritance.md  0004-no-macros.md  0005-no-exceptions.md  0006-no-conditional-compilation.md  0007-no-build-scripts.md  0009-no-operator-overloading.md  0010-one-formatter.md  0011-package-capabilities.md  0012-gc-plus-scoped-arenas.md  0013-core-operators-and-integer-division.md  0014-interpolation-brace-escaping.md  0015-boundary-doctrine.md  0016-scope-implicit-arenas.md  0017-function-capabilities.md  0018-waivers.md  0019-compile-time-contract.md  0020-ecosystem-bootstrap.md  0021-positioning.md  0022-interface-constrained-generics.md  0023-impls-on-primitive-types.md  0024-ai-infrastructure-and-agent-positioning.md  0025-structured-generation.md  0026-structured-concurrency-mechanism.md  0027-json-boundary-mapping.md  0028-http-server-surface.md  0029-sql-database-access.md  0030-config-loading-surface.md  0031-http-router-and-params.md  0032-call-site-type-args.md  0033-universal-error-type.md  0034-core-boundary-scalars.md  0035-multiline-string-literals.md  0036-default-function-parameters.md  0037-sql-error-classification-patterns.md  0038-union-narrowing-patterns.md  0039-option-unwrap.md  0040-json-write-returns-string.md  (+14 more)
docs/spec/: 00-spec-plan.md  01-lexical.md  02-types.md  03-declarations.md  04-expressions.md  05-errors.md  06-modules-packages.md  07-interfaces.md  08-generics.md  09-concurrency.md  10-memory.md  11-capabilities.md  14-editions.md  15-stdlib-core.md  16-lsp.md  17-codegen.md  18-hermetic-builds.md  19-oci-images.md  AGENTS.md  keel-core.md
examples/: AGENTS.md  hello.keel
examples/capability-audit/: README.md  keel.toml  main.keel
examples/capability-audit/payments/: keel.toml  lib.keel
examples/capability-audit/pricing/: keel.toml  lib.keel
examples/job-pipeline/: README.md  main.keel
examples/users-service/: README.md  main.keel
keel-brand-kit/: keel-style-guide.md
scripts/: check-diagnostics-doc.sh  check-docs.rs  check-docs.sh  check-harness.sh  check-lsp-fixtures.sh  gen-diagnostics-doc.rs  m8-benchmark.sh  preflight.sh
tests/conformance/: AGENTS.md  README.md
tests/conformance/001-hello-world/: main.keel
tests/conformance/002-no-implicit-zero/: main.keel
tests/lsp/: README.md
(+401 files in other folders)
