[workspace]
resolver = "2"
members = [
    "compiler/conformance-runner",
    "compiler/keelc-driver",
    "compiler/keelc-span",
    "compiler/keelc-diag",
    "compiler/keelc-lex",
    "compiler/keelc-ast",
    "compiler/keelc-parse",
    "compiler/keelc-types",
    "compiler/keelc-resolve",
    "compiler/keelc-backend-go",
]
