[package]
name = "keelc-driver"
version = "0.1.0"
edition = "2021"
description = "Keel CLI driver library and binaries for build, run, fmt, and test."

[dependencies]
keelc-ast = { path = "../keelc-ast" }
keelc-backend-go = { path = "../keelc-backend-go" }
keelc-diag = { path = "../keelc-diag" }
keelc-kir = { path = "../keelc-kir" }
keelc-parse = { path = "../keelc-parse" }
keelc-resolve = { path = "../keelc-resolve" }
keelc-span = { path = "../keelc-span" }
salsa = { version = "0.27.2", default-features = false, features = ["inventory", "macros"] }
