[package]
name = "keelc-driver"
version = "0.1.1"
edition = "2021"
description = "Keel CLI driver library and binaries for build, run, fmt, and test."

[dependencies]
keelc-ast = { path = "../keelc-ast" }
keelc-backend-go = { path = "../keelc-backend-go" }
keelc-diag = { path = "../keelc-diag" }
keelc-kir = { path = "../keelc-kir" }
keelc-lsp = { path = "../keelc-lsp" }
keelc-parse = { path = "../keelc-parse" }
keelc-query = { path = "../keelc-query" }
keelc-resolve = { path = "../keelc-resolve" }
keelc-span = { path = "../keelc-span" }
