[package]
name = "keelc-kir"
version = "0.1.0"
edition = "2021"
description = "Keel intermediate representation (KIR) and AST lowering."

[dependencies]
keelc-ast = { path = "../keelc-ast" }
keelc-diag = { path = "../keelc-diag" }
keelc-parse = { path = "../keelc-parse" }
keelc-span = { path = "../keelc-span" }
keelc-types = { path = "../keelc-types" }
