[package]
name = "keelc-lsp"
version = "0.1.1"
edition = "2021"
description = "M8 base LSP server for keel lsp (spec ch. 16, KDR-0103)."

[dependencies]
keelc-ast = { path = "../keelc-ast" }
keelc-diag = { path = "../keelc-diag" }
keelc-lex = { path = "../keelc-lex" }
keelc-parse = { path = "../keelc-parse" }
keelc-query = { path = "../keelc-query" }
keelc-span = { path = "../keelc-span" }
lsp-server = "0.9.0"
lsp-types = "0.97.0"
serde = "1"
serde_json = "1"
