[package]
name = "keelc-query"
version = "0.1.0"
edition = "2021"
description = "Salsa-backed query core shared by the keel CLI driver and keel lsp (M8, KDR-0106)."

[dependencies]
keelc-ast = { path = "../keelc-ast" }
keelc-backend-go = { path = "../keelc-backend-go" }
keelc-diag = { path = "../keelc-diag" }
keelc-kir = { path = "../keelc-kir" }
keelc-parse = { path = "../keelc-parse" }
keelc-resolve = { path = "../keelc-resolve" }
keelc-span = { path = "../keelc-span" }
salsa = { version = "0.27.2", default-features = false, features = ["inventory", "macros"] }
